[package]
name = "confinuum"
edition = "2021"
version = "0.1.0"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "A CLI tool for managing configuration files across multiple Linux machines."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
common-path = "1.0.0"
crossterm = "0.26.0"
dialoguer = "0.10.3"
either = "1.8.1"
email_address = "0.2.4"
git-url-parse = "0.4.4"
git2 = { version = "0.16.1", features = ["ssh", "https", "ssh_key_from_memory", ] } # "vendored-openssl"
jsonwebtoken = "8.2.0"
octocrab = "0.18.1"
pathdiff = "0.2.1"
reqwest = "0.11.14"
secrecy = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
spinoff = { version = "0.7.0", features = ["dots9"], default-features = false }
ssh2 = "0.9.3"
tempdir = "0.3.7"
tokio = {version = "1.25.0", features = ["full"] }
toml = "0.7.1"
whoami = "1.3.0"
